ReyclerView is not ready yet, but so close.

--- a/Android/Scrummerz/app/src/main/AndroidManifest.xml
+++ b/Android/Scrummerz/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_login"
             android:theme="@style/FullscreenTheme" />
-        <activity android:name=".signedInStart"></activity>
+        <activity android:name=".signedInStart" />
+        <activity android:name=".activity_courses"></activity>
     </application>
 
 </manifest>
