--- a/Android/Scrummerz/app/src/main/AndroidManifest.xml
+++ b/Android/Scrummerz/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <activity android:name=".signedInStart" />
         <activity android:name=".activity_courses" />
         <activity android:name=".CourseInfo" />
-        <activity android:name=".grades_activity"></activity>
+        <activity android:name=".grades_activity" />
+        <activity android:name=".assignment"></activity>
     </application>
 
 </manifest>
