--- a/Android/Scrummerz/app/src/main/AndroidManifest.xml
+++ b/Android/Scrummerz/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         <activity android:name=".activity_courses" />
         <activity android:name=".CourseInfo" />
         <activity android:name=".grades_activity" />
-        <activity android:name=".assignment"></activity>
+        <activity android:name=".assignment" />
+        <activity android:name=".assignment_grades"></activity>
     </application>
 
 </manifest>
