--- a/Android/Scrummerz/app/build.gradle
+++ b/Android/Scrummerz/app/build.gradle
@@ -38,8 +38,10 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:10.2.4'
     compile 'com.google.firebase:firebase-crash:10.2.4'
     compile 'com.google.firebase:firebase-core:10.2.4'
+    compile 'me.dm7.barcodescanner:zxing:1.9'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
